--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <h2>It's 50/50 mate, glhf.</h2>
     <h3>yes, it's 50/50 if you don't count ties</h3>
 
-<p id="resetButton" onclick="resetGame()">reset</p>
+<button id="resetButton" onclick="resetGame()">reset</button>
 
-    <div id="round">1/5</div>
     <table>
         <tr>
             <td>Your Score</td>
@@ -27,9 +26,9 @@
             <td id="cpuScore">0</td>
         </tr>
     </table>
-        <button id="rockButton">rock</button>
-        <button id="paperButton">paper</button>
-        <button id="scissorsButton">scissors</button>
+        <button id="rockButton" onclick="rockClick()">rock</button>
+        <button id="paperButton" onclick="paperClick()">paper</button>
+        <button id="scissorsButton" onclick="scissorsClick()">scissors</button>
         <div id="prompt">pick one</div>
         
 
